--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <h1>About</h1>
-    <img src="img/robot.png">
+    {{>header}}
+    <p>{{helpText}}</p>
+     {{>footer}}
 </body>
 </html>
