52. Styling the Application: Part II

--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -2,13 +2,17 @@
 <html>
 
 <head>
+    <title>About</title>
     <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
 <body>
+    <div class="main-content">
     {{>header}}
-    <img src="img/robot.png">
+    <img class="portrait" src="img/robot.png">
+    </div>
+
     {{>footer}}
 </body>
 </html>
