--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -2,13 +2,17 @@
 <html>
 
 <head>
+    <title>help</title>
     <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
 <body>
-    {{>header}}
+    <div class="main-content">
+ {{>header}}
     <p>{{helpText}}</p>
+    </div>
+   
      {{>footer}}
 </body>
 </html>
