--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -5,14 +5,23 @@
     <title>Weather</title>
 <link rel="stylesheet" href="/css/styles.css">
 
-<script src="js/app.js"></script>
 </head>
 
 <body>
     <div class="main-content">
     {{>header}}
 <p>Use this site to get your weather!</p>
+    
+    <form>
+        <input placeholder="Loaction">
+        <button>Search</button>
+    </form>
+    
+    
+    
     </div>
     {{>footer}}
+<script src="js/app.js"></script>
+
 </body>
 </html>
