--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -16,6 +16,8 @@
         <input placeholder="Loaction">
         <button>Search</button>
     </form>
+    <p id="message-1"></p>
+    <p id="message-2"></p>
     
     
     
